--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@supabase/supabase-js": "^2.49.7",
     "chart.js": "^3.9.1",
     "new-word": "file:",
