--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "new-word": "file:",
     "ng2-charts": "^4.0.1",
     "ngx-material-timepicker": "^13.1.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "src": "^1.1.2",
     "tslib": "^2.3.0",
